# crewai-observability

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  arch_agent.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  security.yml
config/: agents.yaml  tasks.yaml
docker/: docker-compose.yml  otel-collector-config.yaml
docs/: COMPONENTS.md  DEPLOYMENT.md  OBSERVABILITY.md  SECURITY.md  WORKFLOW.md
src/crewai_observability/: auth.py  crew.py
src/crewai_observability/tools/: google_tools.py
src/crewai_scheduling_assistant/: crew.py  main.py
src/crewai_scheduling_assistant/tools/: google_tools.py
tasks/: task1.md  task10.md  task12.md  task13.md  task13_remediation.md  task14.md  task14_remediation.md  task15.md  task15_remediation.md  task2.md  task3.md  task4.md  task5.md  task6.md  task7.md  task8.md  task9.md
tests/integration/: test_crew.py
tests/unit/: test_agents.py  test_google_tools.py
