[tool.poetry]
name = "crewai_scheduling_assistant"
version = "0.1.0"
description = "An observable crewAI project for scheduling."
authors = ["Jules <jules@example.com>"]
packages = [
    { include = "crewai_scheduling_assistant", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
crewai = "*"
crewai_tools = "*"
python-dotenv = "*"
google-api-python-client = "*"
google-auth-httplib2 = "*"
google-auth-oauthlib = "*"
traceloop-sdk = "*"
opentelemetry-instrumentation-crewai = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
