[tool.poetry]
name = "crewai_scheduling_assistant"
version = "0.1.0"
description = "An observable crewAI project for scheduling."
authors = ["Jules <jules@example.com>"]
packages = [
    { include = "crewai_observability", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
crewai = "*"
crewai_tools = "*"
python-dotenv = "*"
google-api-python-client = "*"
google-auth-httplib2 = "*"
google-auth-oauthlib = "*"
traceloop-sdk = "*"
opentelemetry-instrumentation-crewai = "*"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
